--- a/css/amazon.css
+++ b/css/amazon.css
@@ -200,41 +200,92 @@ header {
     box-shadow: 0 0 10px rgba(0,0,0,.5);
     padding: 20px;
     position: relative;
-    grid-template: box-img-modal info-modal /
+    display: grid;
+    grid-template: "box-img-modal  info-modal"  /
                         1fr          350px;
     
+}
+.btn-close{
+    position: absolute;
+    top: 7px;
+    right: 11px;
+    font-size: 2em;
+    border: 1px solid rgb(24, 33, 151);
+    border-radius: 4px;
+    padding: 0 4px;
+    line-height: 1.1em;
+    box-shadow: 0 0 10px rgba(25, 11, 133, 0.5);
 } 
-.main-img-modal{
- grid-area:  box-img-modal;
- background-color: blue;
- width: 50%;
- height: 100%;
- display: flex;
- justify-content: center;
- align-items: center;
+.box-img-modal{
+    grid-area:  box-img-modal;
+    background-color: rgb(0, 0, 126);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 
 .info-modal{
     grid-area: info-modal;
-    background-color: rgb(85, 85, 139);
-    width: 50%;
+    background-color: rgb(62, 1, 148);
+    display: flex;
+    width: 90%;
+    height: 100%;  
+    flex-direction: column;
+    padding: 30px 0 0 10px;
+}
+.txt-caracteristicas-modal{
+    font-weight: 400;
+    font-size: 1.2em;
+}
+.txt-sub-description-modal{
+    padding-top: 10px;
+    color: gray;
+}
+.box-modal-img{
+    position: relative;
+    background-color: black;
+    display: flex;
+    width: 97%;
     height: 50%;
+    margin-top: 10px;
+    display: grid;
+    grid-template:"box-img-1 box-img-2 box-img-3 box-img-4 " 
+                  "box-img-5 box-img-6 box-img-7" /
+                   1fr          1fr        1fr     1fr ;
+}
+.img{
+    background-color: #fff;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+.box-img-1{
+    grid-area: box-img-1;
+    display: flex; 
+    top: 0;
+}
+.box-img-2{
+    grid-area: box-img-2;
+}
+.box-img-3{
+    grid-area: box-img-3;
+}
+.box-img-4{
+    grid-area: box-img-4;
+}
+.box-img-5{
+    grid-area: box-img-5;
+}
+.box-img-6{
+    grid-area: box-img-6;
+}
+.box-img-7{
+    grid-area: box-img-7;
 }
 
-
-
-.btn-close{
-    position: absolute;
-    top: 5px;
-    right: 10px;
-    font-size: 2em;
-    border: 1px solid grey;
-    border-radius: 4px;
-    padding: 0 3px;
-    line-height: 1.1em;
-    box-shadow:gray ;
-}
 
 
 
