--- a/css/amazon.css
+++ b/css/amazon.css
@@ -230,47 +230,60 @@ header {
     height: 100%;
     display: grid;
     grid-template: " box-contenido-img-muestra  box-contenido-img-grande   box-contenido-deescripcion   box-contenido-compra " 45em/
-                                     5.3em                  2fr                           3.5fr                          1fr               ;
+                                     4.5em                  2fr                           3.5fr                          1fr               ;
 }
 .contenido{
     margin-right: 10px;
 }
 .box-contenido-img-muestra{grid-area: box-contenido-img-muestra;
-    
-    background-color: #5a5a5a;
     margin-left: 10px;
     position: relative;
-    width: 97%;
-    height: 50%;
-    margin-top: 10px;
-    display: grid;
-
-    grid-template: "muestra-1 muestra-2 muestra-3 muestra-4 muestra-5 muestra-6 muestra-7 muestra-8"
-        70px 70px 73px 73px;
-
+    /* display: grid;
+    grid-template: "muestra-1 muestra-2 muestra-3 muestra-4 muestra-5 muestra-6 muestra-7 muestra-8" 
+    repeat(8, 1fr); */
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    
 }
 .box-contenido-img-muestra >.box-imagen-muestra{
     
-    background-color: #3b1b1b;
+    background-color: #727272;
     width: 100%;
-    height: 50px;
-    border: 1px solid red;
-    margin-bottom: 5px;
+    height: 60px;
+    border: 1px solid rgb(255, 255, 255);
     display: flex;
     justify-content: center;
+    border-radius: 15px;
 }
-
-
-
+.box-imagen-muestra:hover{
+    box-shadow: 0 0 10px rgba(23, 193, 223, 0.5); 
+    border: 1px solid rgb(24, 132, 151);
+}
+.img-mano-thumbnail {
+    width: 100%;
+    border-radius: 15px;
+}
 
 .box-contenido-img-grande{ grid-area: box-contenido-img-grande;
-    background-color: #200b0b;
-
+    text-align: center;
 }
+.display-none{
+    display: none !important;
+}
+.txt-img-grande{
+    color: #808080;
+}
+
 .box-contenido-deescripcion{ grid-area: box-contenido-deescripcion ;
-    background-color: #3b1b1b;
-
+    background-color: #6d6d6d;
 }
+
+.seccion{
+   background-color: #3f3131;
+   margin-bottom: 10px;
+}
+
 .box-contenido-compra{ grid-area: box-contenido-compra;
     background-color: #b12323;
 
