--- a/css/amazon.css
+++ b/css/amazon.css
@@ -225,19 +225,44 @@ header {
 }
 /*terminar de organizar////////////////////////////////////////*/
 .box-contenido-producto{
+    position: relative;
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template: "empty-left box-contenido-img-muestra  box-contenido-img-grande   box-contenido-deescripcion   box-contenido-compra empty-right" 45em/
-                       220px               5em                  2fr                           2fr                          1fr              220px ;
+    grid-template: " box-contenido-img-muestra  box-contenido-img-grande   box-contenido-deescripcion   box-contenido-compra " 45em/
+                                     5.3em                  2fr                           3.5fr                          1fr               ;
 }
 .contenido{
     margin-right: 10px;
 }
 .box-contenido-img-muestra{grid-area: box-contenido-img-muestra;
-background-color: #5a5a5a;
+    
+    background-color: #5a5a5a;
+    margin-left: 10px;
+    position: relative;
+    width: 97%;
+    height: 50%;
+    margin-top: 10px;
+    display: grid;
+
+    grid-template: "muestra-1 muestra-2 muestra-3 muestra-4 muestra-5 muestra-6 muestra-7 muestra-8"
+        70px 70px 73px 73px;
 
 }
+.box-contenido-img-muestra >.box-imagen-muestra{
+    
+    background-color: #3b1b1b;
+    width: 100%;
+    height: 50px;
+    border: 1px solid red;
+    margin-bottom: 5px;
+    display: flex;
+    justify-content: center;
+}
+
+
+
+
 .box-contenido-img-grande{ grid-area: box-contenido-img-grande;
     background-color: #200b0b;
 
