--- a/css/amazon.css
+++ b/css/amazon.css
@@ -224,7 +224,19 @@ header {
     color: #5a5a5a;
 }
 /*terminar de organizar////////////////////////////////////////*/
-
+/*! clases globales  */
+.azul{
+    color: #007185;
+}
+.no-estilos{
+    text-decoration: none;
+}
+.negrita{
+    font-weight: 600;
+}
+.verde{
+    color: green;
+}
 /*! inicio de adminisracion de contenedores de compra*/
 /*! contenedor numero 1 */
 .box-contenido-producto{
@@ -249,8 +261,8 @@ header {
 .box-contenido-img-muestra >.box-imagen-muestra{
     
     
-    width: 100%;
-    height: 60px;
+    width: 90%;
+    height: 50px;
     border: 1px solid rgb(255, 255, 255);
     display: flex;
     justify-content: center;
@@ -298,7 +310,17 @@ header {
      display: flex;
     flex-direction: row;   
 }
-
+.numero-puntuacion{
+    width: 20px;
+}
+.estrellas{
+    width: 90px;
+    display: flex;
+    flex-direction: row;
+}
+.estrella-completa{
+    background-color: burlywood;
+}
 .estrella{
     cursor: pointer;
     color: burlywood;
@@ -310,35 +332,87 @@ header {
 .box-seccion-2{
     
 }
+
 .opcion-text{
-    
+
     text-align: center;
     height: 1.5em;
-    width: 9em;
+    width: 12em; 
     font-size: 15px;
-    background-color: #041053;
     text-decoration: none;
     cursor: pointer;
     
+    border-right: 12px solid transparent;
+    border-top: 23px solid #041053;
+
 }
 .txt-opcion-blanco{
-    
+    position: relative;
+    top: -20px;
+    font-size: 17px;    
     color: white;
 }
 .txt-opcion-naranja{
-    color: rgb(255, 72, 0);
+    font-size: 17px;  
+    color: rgb(192, 98, 10);
+    position: relative;
+    top: -20px;
+}
+.box-seccion-2{
+
+}
+.seccion-2-item-precio{
+
+}
+.tamaño-menor{
+    font-size: 15px;
+}
+.tamaño-mayor{
+    font-size: 30px;
+}
+.item-devoluciones{
+   
+}
+.devoluciones-tamaño-menor{
+    font-size: 15;
+}
+.devoluciones-tamaño-mayor{
+    font-size: 20;
+}
+.item-caracteristicas{
+    display: grid;
+    grid-template: "item-caracteristicas-1 item-caracteristicas-2 right"/
+                            1fr    1fr  1fr;
+}
+.item-caracteristicas-1 {
+    grid-area: item-caracteristicas-1 ;
+    flex-direction: column  ;
+    display: flex;
+    font-weight: 600;
+}
+.item-caracteristicas-2{
+    grid-area: item-caracteristicas-2;
+    display: flex;
+    flex-direction: column;
 }
 
-
-
-
-
+.lista-sobre-articulo{
+    padding-left: 20px;
+    line-height: 25px;
+}
 /*! contenedor numero 4 */
 .box-contenido-compra{ grid-area: box-contenido-compra;
-    background-color: #b12323;
 
+    border-radius: 5px;
+    border: 1px solid gray;
 }
-
+.box-contenido-compra-margen{
+    margin: 20px;
+}
+.contenido-info-separacion-1{
+ 
+    
+}
 
 
 /*! watafaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa*/
